syntax = "proto3";

option go_package = "github.com/paysuper/paysuper-recurring-repository/pkg/proto/entity";

package entity;

import "google/protobuf/timestamp.proto";

message SavedCard {
    // @inject_tag: json:"id"
    string id = 1;
    string token = 2;
    string project_id = 3;
    string merchant_id = 4;
    // @inject_tag: json:"pan"
    string masked_pan = 5;
    // @inject_tag: json:"expire"
    CardExpire expire = 6;
    string recurring_id = 7;
    bool is_active = 8;
    google.protobuf.Timestamp created_at = 9;
    google.protobuf.Timestamp updated_at = 10;
}

message CardExpire {
    // @inject_tag: json:"month"
    string month = 1;
    // @inject_tag: json:"year"
    string year = 2;
}